--- a/switch.html
+++ b/switch.html
@@ -675,7 +675,7 @@
         <div class="config-card">
             <div class="config-item">
                 <div class="config-label">Repository</div>
-                <div class="config-value">ddgoncalves27/teste</div>
+                <div class="config-value">TKT007/mako-test</div>
             </div>
             <div class="config-item">
                 <div class="config-label">Branch</div>
@@ -797,7 +797,7 @@
 
             try {
                 const response = await fetch(
-                    'https://api.github.com/repos/ddgoncalves27/teste/contents/index.html?ref=main',
+                    'https://api.github.com/repos/TKT007/mako-test/contents/index.html?ref=main',
                     {
                         headers: {
                             'Authorization': `Bearer ${githubToken}`,
