--- a/index.html
+++ b/index.html
@@ -565,6 +565,8 @@
     </div>
 
     <script>
+        javascriptconst DISABLED_PAGES = [
+];
         // MASTER CONTROL LIST - Update this on GitHub to control all pages
         const DISABLED_PAGES = [
             'asad'
