--- a/index.html
+++ b/index.html
@@ -567,7 +567,8 @@
     <script>
         // MASTER CONTROL LIST - Update this on GitHub to control all pages
         const DISABLED_PAGES = [
-            'asad'
+            'asad',
+            '1234'
         ];
         
         // Check if page should be displayed
